<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:background="@drawable/editor_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.161">

        <TextView
            android:id="@+id/oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:padding="1dp"
            android:text="@string/username"
            android:textColor="#616161"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/oldPassword"
            android:background="#03A9F4" />

        <EditText
            android:id="@+id/editor_Password"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/deleteTrigger1"
            android:layout_toEndOf="@+id/oldPassword"
            android:autofillHints=""
            android:ems="19"
            android:hint="@string/please_enter_username"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:minHeight="48dp"
            android:padding="1dp"
            android:singleLine="true"
            android:textColorHint="#616161"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/deleteTrigger1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/delete_trigger"
            android:src="@drawable/delete"
            android:visibility="invisible"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="390dp"
        android:layout_height="69dp"
        android:background="@drawable/editor_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.023">

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:padding="1dp"
            android:text="@string/password"
            android:textColor="#616161"
            android:textSize="20sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/Password"
            android:background="#03A9F4" />

        <EditText
            android:id="@+id/edit_Password"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/deleteTrigger2"
            android:layout_toEndOf="@+id/Password"
            android:autofillHints=""
            android:ems="19"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:lines="1"
            android:minHeight="48dp"
            android:padding="1dp"
            android:singleLine="true"
            android:textColorHint="#616161"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/deleteTrigger2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/delete_trigger"
            android:src="@drawable/delete"
            android:visibility="invisible"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkLogin"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.299"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/LoginButton"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toEndOf="@+id/LoginButton"
        app:layout_constraintTop_toTopOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>