<resources>
    <string name="app_name">My Marketplace</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="delete_trigger">delete trigger</string>
    <string name="searchMenu">Search</string>
    <string name="cartMenu">Cart</string>
    <string name="messageMenu">Message</string>
    <string name="profileMenu">Profile</string>
    <string name="searchEditor">Search something</string>
    <string name="searchButton">searchButton</string>
    <string name="signOutButton">Sign Out</string>
    <string name="chatButton">Chat</string>
    <string name="blacklistButton">Blacklist</string>
    <string name="sendButton">SEND</string>
    <string name="inputHint">input content</string>
    <string name="backwardButton">backward</string>
    <string name="addcart">addCart</string>
    <string name="itempicture">itemPicture</string>
    <string name="checkoutButton">CheckOut</string>
    <string name="totalString">Total:</string>
    <string name="selectallbox">SelectAll</string>
    <string name="number">Number</string>
    <string name="goods">Goods</string>
    <string name="select">Select</string>
    <string name="addwishlist">addWishlist</string>
    <string name="change_password">Change password</string>
    <string name="wishlist">Wishlist</string>
    <string name="old_password">Old password</string>
    <string name="please_enter_current_password">enter current password</string>
    <string name="new_password">New password</string>
    <string name="please_enter_new_password">enter new password</string>
    <string name="check_password">Check password</string>
    <string name="please_enter_check_password">new password again</string>
    <string name="confirm">Confirm</string>
    <string name="jump">jump</string>
    <string name="surprise">Surprise!</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>
</resources>