<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.fragments.SearchFragment">

    <RelativeLayout
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editor_box">

        <EditText
            android:id="@+id/searchEditor"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/searchEditor"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#546E7A"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/searchEditor"
            android:contentDescription="@string/searchButton"
            android:src="@android:drawable/ic_menu_search"
            tools:ignore="ImageContrastCheck" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:layout_marginTop="200dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:text="@string/ascending" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="130dp"
        android:text="@string/descending" />

    <EditText
        android:id="@+id/surprise"
        android:layout_width="280dp"
        android:layout_height="61dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:hint="Try some price to get random ?"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="140dp"
        android:text="@string/surprise" />

</FrameLayout>